Continued work on analysis

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Necessary imports\n",
     "import nltk\n",
     "import spacy\n",
+    "from spacy.matcher import Matcher\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +95,41 @@
     "    return count\n",
     "\n",
     "# Generator which yields the concordances for a given textual column of a dataframe\n",
-    "def concordances(col:pd.Series, regex:re.Pattern) -> str:\n",
+    "# phrase should be a raw string, context cols should be a list of column names\n",
+    "# once_per = only one concordance per textual datapoint (if there is more)\n",
+    "# sides = # of chars to the left and right\n",
+    "# num = number of concordances to display\n",
+    "def concordances(df:pd.DataFrame, phrase:str, col:str='text', context_cols: list()=[], sides:int=30, num:int=20, once_per=False):\n",
+    "    \n",
+    "    # Set-up\n",
+    "    context = bool(len(context_cols))\n",
+    "    regex = r'((?:[a-z]+ ){,' + str(sides) + r'})(\\b' + phrase + r'\\b)((?: [a-z]+){,' + str(sides) + r'})'\n",
+    "    cutoff = 0\n",
     "\n",
-    "    for concordance_list in col.str.findall(regex):\n",
+    "    for (ind, concordance_list) in enumerate(df[col].str.findall(regex, re.I)):\n",
+    "\n",
     "        if len(concordance_list) == 0:\n",
     "            continue\n",
+    "\n",
+    "        # Format text if context was stated\n",
+    "        output = ''\n",
+    "        if context:\n",
+    "            cont = df.loc[ind, context_cols]\n",
+    "            output = ' | '.join([col.title() + \": \" + cont[col] for col in context_cols]) + \" | Concordance:\\n\\t\"\n",
+    "\n",
     "        for concordance in concordance_list:\n",
-    "            \n",
-    "    "
+    "            cutoff = cutoff + 1\n",
+    "            if cutoff > num:\n",
+    "                return\n",
+    "            else:\n",
+    "                yield output + '...' + ''.join(concordance).replace(concordance[1], concordance[1].upper()) + '...'\n",
+    "            if once_per:\n",
+    "                break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +177,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Exploring Usage of the 2nd Person Pronoun and Other Pronouns and Pro-verbs.\n",
+    "## Exploring Usage of the 2nd Person Pronoun\n",
     "First, focusing on _you_ (not \"you-you\", but _you_, the word), let's simply graph the number of occurrences in each of the datasets. To do this, we must consider what forms of you could appear in the dataset. Obviously, the biggest concerns would be contractions (_you're_, _you'd_), but what about _y'all_? Since _y'all_ can refer **both** to an individual and a group of people, I chose to ignore it for two reasons:\n",
     "1. I am want to focus on the 2nd person **singular** pronoun to see how it is used in relation to the player.\n",
     "2. Overall occurrences of _y'all_ are low, and the times they refer directly to the player is even lower; this means we can ignore it without the concern of data-skewing.\n",
@@ -253,58 +276,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('', 'You', ' are in big trouble')]\n",
-      "[('footage of ', 'you', ' on the Manaan swoop track'), ('what ', 'you', ' doing here')]\n"
+      "===================== \"You\" Concordance Samples =====================\n",
+      "===================== TES Books =====================\n",
+      "Author: Anonymous | Title: yellow-book-riddles-0 | Concordance:\n",
+      "\t...What YOU do to stay ahead...\n",
+      "Author: Amili Drals | Title: tale-baar-dau | Concordance:\n",
+      "\t...ll tell YOU a tale...\n",
+      "Author: Hadmal | Title: letter-sonya | Concordance:\n",
+      "\t...t know why I continue to leave YOU these notes...\n",
+      "Author: Lady Eloisse, Fifth Countess Manteau | Title: clothier-light-armor-basics | Concordance:\n",
+      "\t...Let me tell YOU just a little bit about how we do it...\n",
+      "Author: Bolga gra-Bur, Huntswoman of Mistral | Title: bolgas-guide-island-beasts | Concordance:\n",
+      "\t...Bolga tells YOU where to find them...\n",
+      "Author: Attributed to Glargargil the Speaking Oak | Title: wyresses-name-daughters | Concordance:\n",
+      "\t...I name YOU the Earth...\n",
+      "Author: Anonymous | Title: death-no-laughing-matter | Concordance:\n",
+      "\t...m going to make it gnaw YOU to pieces when I find YOU...\n",
+      "Author: Anonymous | Title: ode-red-bird | Concordance:\n",
+      "\t...as YOU set aside the ground below...\n",
+      "Author: Borzugh gro-Morkul | Title: borzughs-letter | Concordance:\n",
+      "\t...As YOU know from studying history...\n",
+      "Author: Buljursoma | Title: ius-animal-god | Concordance:\n",
+      "\t...t tell YOU earlier is because I am an early adolescent going through that period when I don...\n",
+      "===================== Hollow Knight Dialogue =====================\n",
+      "Character: Sly | Concordance:\n",
+      "\t...which is useful if YOU like to poke around in places YOU don...\n",
+      "Character: Unnamed Moth | Concordance:\n",
+      "\t...YOU who pry into even the most hidden of dreams...\n",
+      "Character: Mister Mushroom | Concordance:\n",
+      "\t...s nice that YOU were able to help YOUr friend...\n",
+      "Character: Tiso | Concordance:\n",
+      "\t...YOU wear that nail with ease...\n",
+      "Character: Distant Villagers | Concordance:\n",
+      "\t...YOU are very tired...\n",
+      "Character: Troupe Master Grimm | Concordance:\n",
+      "\t...it was YOU who called us...\n",
+      "Character: Cornifer | Concordance:\n",
+      "\t...Sorry I missed YOU...\n",
+      "Character: Iselda | Concordance:\n",
+      "\t...If YOU...\n",
+      "===================== KOTOR Dialogue =====================\n",
+      "Speaker: Player | Listener: NO LISTENER | Concordance:\n",
+      "\t...I was wondering if YOU had any more war stories...\n",
+      "Speaker: Player | Listener: NO LISTENER | Concordance:\n",
+      "\t...This must be very painful for YOU...\n",
+      "===================== Torchlight Quests =====================\n",
+      "Speaker: NO SPEAKER | Concordance:\n",
+      "\t...Thank the Guardians YOU...\n",
+      "Speaker: Vanquisher Captain | Concordance:\n",
+      "\t...the Professor sent YOU after the Power Source...\n",
+      "Speaker: Trill-Bot 4000 | Concordance:\n",
+      "\t...YOU...\n",
+      "Speaker: NO SPEAKER | Concordance:\n",
+      "\t...The reconsituted Trillbot has presented YOU with a fragment of verse...\n",
+      "Speaker: Zeraphi | Concordance:\n",
+      "\t...Have YOU face Tu...\n",
+      "Speaker: Mad Vanquisher Guard | Concordance:\n",
+      "\t...Have YOU seen any more of those demon...\n",
+      "Speaker: Professor Stoker | Concordance:\n",
+      "\t...I wish YOU had gotten here sooner...\n",
+      "Speaker: Destroyer | Concordance:\n",
+      "\t...m going to be any use to YOU...\n",
+      "Speaker: Fade | Concordance:\n",
+      "\t...why have YOU summoned me...\n",
+      "Speaker: Sprocket | Concordance:\n",
+      "\t...ve provided helps YOU in YOUr search...\n"
      ]
     }
    ],
    "source": [
-    "# Concordances regex\n",
-    "concordances_re = re.compile(r'((?:[a-z]+ ){,20})(\\byou\\b)((?: [a-z]+){,20})', re.I)\n",
+    "print(\"===================== \\\"You\\\" Concordance Samples =====================\")\n",
+    "print(\"===================== TES Books =====================\")\n",
+    "for sent in concordances(elder_scrolls_df.sample(100, ignore_index=True), phrase='you', context_cols=['author', 'title'], num=10, once_per=True):\n",
+    "    print(sent)\n",
     "\n",
-    "test = \"You are in big trouble\"\n",
-    "print(concordances_re.findall(test))\n",
-    "# Kotor\n",
-    "conkotor = kotor_df['text'].str.findall(concordances_re)\n",
-    "print(conkotor[4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "sequence item 0: expected str instance, tuple found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_23192/840825215.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mcon\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconcordances\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkotor_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconcordances_re\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_23192/2500438703.py\u001b[0m in \u001b[0;36mconcordances\u001b[0;34m(col, regex)\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m             \u001b[0;32myield\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconcordance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, tuple found"
-     ]
-    }
-   ],
-   "source": [
-    "for con in concordances(kotor_df['text'], concordances_re):\n",
-    "    print(con)"
+    "print(\"===================== Hollow Knight Dialogue =====================\")\n",
+    "for sent in concordances(hollow_knight_df.sample(10, ignore_index=True), phrase='you', context_cols=['character'], num=10, once_per=True):\n",
+    "    print(sent)\n",
+    "\n",
+    "print(\"===================== KOTOR Dialogue =====================\")\n",
+    "for sent in concordances(kotor_df.sample(10, ignore_index=True), phrase='you', context_cols=['speaker', 'listener'],num=10, once_per=True):\n",
+    "    print(sent)\n",
+    "\n",
+    "print(\"===================== Torchlight Quests =====================\")\n",
+    "for sent in concordances(torchlight_df.sample(100, ignore_index=True), phrase='you', context_cols=['speaker'], num=10, once_per=True):\n",
+    "    print(sent)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Other Pronouns\n",
-    "Let's do this same thing for some other common pronouns: _I/me_, _he/she/him/her_, _we/us_, _they/them_. The reason I chose to go with these forms is because these forms can appear in the same contexts that _you_ would appear in. In other words, I'm simply leaving out posessive pronouns. Of course, just like with _you_, I have to consider some contractions, but those have been treated the same way as before."
+    "***\n",
+    "## Other Pronouns\n",
+    "Let's at the percentages for some other common pronouns: _I/me_, _he/she/him/her_, _we/us_, _they/them_. The reason I chose to go with these forms is because these forms can appear in the same contexts that _you_ would appear in. In other words, I'm simply leaving out posessive pronouns. Of course, just like with _you_, I have to consider some contractions, but those have been treated the same way as before."
    ]
   },
   {
@@ -378,7 +450,7 @@
     "    for (i, c) in enumerate(datasets):\n",
     "        percentages = np.append(percentages, locator(datasets[i]['text'], re_dict[pronoun])/get_count(datasets[i]['text']))\n",
     "\n",
-    "    barplot(x=titles, y=percentages*100, title= pronoun + ' Occurrence as Percentages', xlabel=\"Dataset\", ylabel=\"Percentage\")\n",
+    "    barplot(x=titles, y=percentages*100, title=pronoun + ' Occurrence as Percentages', xlabel=\"Dataset\", ylabel=\"Percentage\")\n",
     "\n",
     "plt.show()"
    ]
@@ -387,17 +459,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pro-Verbs\n",
-    "In other words, _to do_. The main problem is that _to do_ functions both as a pro-verb **and** as an auxiliary verb. Because of this, there needs to be some way to track what part-of-speech that particular _to do_ represents. For this, I will be using _spaCy_ and its standard _\"en\\_core\\_web\\_sm\"_ model."
+    "***\n",
+    "## Pro-Verbs\n",
+    "... In other words, _to do_. The main problem is that _to do_ functions both as a pro-verb **and** as an auxiliary verb. Because of this, there needs to be some way to track what part-of-speech that particular _to do_ represents. For this, I will be using _spaCy_ and its standard _\"en\\_core\\_web\\_sm\"_ model. While it is an AI model, its part-of-speech tagging accuracy is [estimated to be around 97%](https://spacy.io/usage/facts-figures#benchmarks)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the standard en_core_web small package pipeline (larger would be overkill for the task at hand)\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since _spaCy_ works at a document level, we need to compress all of our textual data into one document per game. Due to this, I will only be examining the texts from `hollow_knight_df` and `torchlight_df`, since there's just too much data in `elder_scrolls_df` and `kotor_df` to compress into one document object (a representative sample would also be hard to get)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a stream dump of all the text from hollow_knight_df and torchlight_df, save them to two files in my private sub-directory\n",
+    "# MADE FALSE TO PREVENT ACCIDENTAL FILE CREATION\n",
+    "if False:\n",
+    "    with open('../private/text_dumps/hollow_knight.txt', 'w') as src:\n",
+    "        for text in hollow_knight_df['text']:\n",
+    "            src.write(text)\n",
+    "\n",
+    "    with open('../private/text_dumps/torchlight.txt', 'w') as src:\n",
+    "        for text in torchlight_df['text']:\n",
+    "            src.write(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'spacy.tokens.doc.Doc'> 34673\n",
+      "<class 'spacy.tokens.doc.Doc'> 45613\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create two document objects from the texts\n",
+    "with open('../private/text_dumps/torchlight.txt', 'r') as src:\n",
+    "    torchlight_doc = nlp(src.read(-1))\n",
+    "print(type(torchlight_doc), len(torchlight_doc))\n",
+    "\n",
+    "with open('../private/text_dumps/hollow_knight.txt', 'r') as src:\n",
+    "    hollow_knight_doc = nlp(src.read(-1))\n",
+    "print(type(hollow_knight_doc), len(hollow_knight_doc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now, let's create a matcher which will look for non-auxiliary verbs (via the Universal Tagset) that are also \"do\"\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "\n",
+    "# The pattern, a list of one-key dicts\n",
+    "pattern = [{'LEMMA':'do', 'POS':'VERB'}]\n",
+    "\n",
+    "# They really made this make no sense, huh, a list of a list of dicts that's added to the nlp model like a matplotlib graph is shown. Idk either...\n",
+    "matcher.add(\"Pro-verbs\", [pattern])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "do VERB VBP\n",
+      "do AUX VBP\n",
+      "do AUX VBP\n",
+      "do VERB VBP\n",
+      "do VERB VB\n",
+      "Do AUX VBP\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(\"Yes I do! I do not have it. I do know where it is, I do! Let me do this for you. Do you know the muffin man?\")\n",
+    "for token in doc:\n",
+    "    if token.lemma_ == 'do':\n",
+    "        print(token.text, token.pos_, token.tag_)"
    ]
   }
  ],
