Worked on parts 1 and 3

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
     "    \n",
     "    # Set-up\n",
     "    context = bool(len(context_cols))\n",
-    "    regex = r'((?:[a-z]+ ){,' + str(sides) + r'})(\\b' + phrase + r'\\b)((?: [a-z]+){,' + str(sides) + r'})'\n",
+    "    regex = r'((?:[\\S]+ ){,' + str(sides) + r'})(\\b' + phrase + r'\\b)((?: [\\S]+){,' + str(sides) + r'})'\n",
     "    cutoff = 0\n",
     "\n",
     "    for (ind, concordance_list) in enumerate(df[col].str.findall(regex, re.I)):\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,12 @@
     "    3. _Is it possible to/that you X?_\n",
     "    4. _Are you able to X?_\n",
     "\n",
-    "This is obviously not an exhastive list, but it does cover the most common forms that orders and requests can take."
+    "This is obviously not an exhastive list, but it does cover the most common forms that orders and requests can take.\n",
+    "\n",
+    "### Approach\n",
+    "The way I will examine these previously mentioned requests and orders are as follows:\n",
+    "1. Condense as many as I can into regular expressions.\n",
+    "2. For those which I deem unsuitable for pure regular expressions, _spaCy_ will be used to provide additional context clues with its part of speech tagging ([est. 97% accuracy](https://spacy.io/usage/facts-figures#benchmarks))."
    ]
   },
   {
@@ -276,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -285,69 +290,85 @@
      "text": [
       "===================== \"You\" Concordance Samples =====================\n",
       "===================== TES Books =====================\n",
-      "Author: Anonymous | Title: yellow-book-riddles-0 | Concordance:\n",
-      "\t...What YOU do to stay ahead...\n",
-      "Author: Amili Drals | Title: tale-baar-dau | Concordance:\n",
-      "\t...ll tell YOU a tale...\n",
-      "Author: Hadmal | Title: letter-sonya | Concordance:\n",
-      "\t...t know why I continue to leave YOU these notes...\n",
-      "Author: Lady Eloisse, Fifth Countess Manteau | Title: clothier-light-armor-basics | Concordance:\n",
-      "\t...Let me tell YOU just a little bit about how we do it...\n",
-      "Author: Bolga gra-Bur, Huntswoman of Mistral | Title: bolgas-guide-island-beasts | Concordance:\n",
-      "\t...Bolga tells YOU where to find them...\n",
-      "Author: Attributed to Glargargil the Speaking Oak | Title: wyresses-name-daughters | Concordance:\n",
-      "\t...I name YOU the Earth...\n",
-      "Author: Anonymous | Title: death-no-laughing-matter | Concordance:\n",
-      "\t...m going to make it gnaw YOU to pieces when I find YOU...\n",
-      "Author: Anonymous | Title: ode-red-bird | Concordance:\n",
-      "\t...as YOU set aside the ground below...\n",
-      "Author: Borzugh gro-Morkul | Title: borzughs-letter | Concordance:\n",
-      "\t...As YOU know from studying history...\n",
-      "Author: Buljursoma | Title: ius-animal-god | Concordance:\n",
-      "\t...t tell YOU earlier is because I am an early adolescent going through that period when I don...\n",
-      "===================== Hollow Knight Dialogue =====================\n",
-      "Character: Sly | Concordance:\n",
-      "\t...which is useful if YOU like to poke around in places YOU don...\n",
-      "Character: Unnamed Moth | Concordance:\n",
-      "\t...YOU who pry into even the most hidden of dreams...\n",
-      "Character: Mister Mushroom | Concordance:\n",
-      "\t...s nice that YOU were able to help YOUr friend...\n",
-      "Character: Tiso | Concordance:\n",
-      "\t...YOU wear that nail with ease...\n",
-      "Character: Distant Villagers | Concordance:\n",
-      "\t...YOU are very tired...\n",
-      "Character: Troupe Master Grimm | Concordance:\n",
-      "\t...it was YOU who called us...\n",
-      "Character: Cornifer | Concordance:\n",
-      "\t...Sorry I missed YOU...\n",
-      "Character: Iselda | Concordance:\n",
+      "((?:[a-z]+ ){,30})(\\byou\\b)((?: [a-z]+){,30})\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "Author: Aniis Noru | Title: surfeit-thieves | Concordance:\n",
+      "\t...Who do YOU suppose they are...\n",
+      "Author: Anonymous | Title: scribbled-note | Concordance:\n",
       "\t...If YOU...\n",
+      "Author: Captain Telomure | Title: chief-justiciar-carawen | Concordance:\n",
+      "\t...m sending a soldier in the hope this message reaches YOU...\n",
+      "Author: Anonymous | Title: book-life-and-service-0 | Concordance:\n",
+      "\t...YOU swore...\n",
+      "Author: Aneshi (transcriber) | Title: khunzar-ri-tales-two | Concordance:\n",
+      "\t...How can YOU succeed when even the great Khunzar...\n",
+      "Author: Skull-Mother Fairynn | Title: ghost-our-friend | Concordance:\n",
+      "\t...s creepy and looks gross and might wake YOU up in the middle of the night with that off...\n",
+      "Author: Anonymous | Title: dominion-orders | Concordance:\n",
+      "\t...and send word back on what YOU find...\n",
+      "Author: Anonymous | Title: pledge-simplicity | Concordance:\n",
+      "\t...YOU must not wallow...\n",
+      "Author: Various | Title: crafting-motif-63-dremora | Concordance:\n",
+      "\t...rings for YOU...\n",
+      "Author: Monesa | Title: letter-usha | Concordance:\n",
+      "\t...he will grow to accept YOU in time...\n",
+      "===================== Hollow Knight Dialogue =====================\n",
+      "((?:[a-z]+ ){,30})(\\byou\\b)((?: [a-z]+){,30})\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "Character: Nymm | Concordance:\n",
+      "\t...And now YOU...\n",
+      "Character: Myla | Concordance:\n",
+      "\t...and then when YOU...\n",
+      "Character: Markoth | Concordance:\n",
+      "\t...YOU have come a long way...\n",
+      "Character: Divine | Concordance:\n",
+      "\t...Did YOU call us...\n",
+      "Character: White Defender | Concordance:\n",
+      "\t...I believe in YOU...\n",
+      "Character: Xero | Concordance:\n",
+      "\t...Do YOU still hope...\n",
+      "Character: Charm Lover Salubra | Concordance:\n",
+      "\t...Have YOU ever drunk that bright blue liquid...\n",
       "===================== KOTOR Dialogue =====================\n",
-      "Speaker: Player | Listener: NO LISTENER | Concordance:\n",
-      "\t...I was wondering if YOU had any more war stories...\n",
-      "Speaker: Player | Listener: NO LISTENER | Concordance:\n",
-      "\t...This must be very painful for YOU...\n",
+      "((?:[a-z]+ ){,30})(\\byou\\b)((?: [a-z]+){,30})\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "Speaker: Bastila | Listener: NO LISTENER | Concordance:\n",
+      "\t...s no need for YOU to agree so whole...\n",
+      "Speaker: Spirit of Ajunta Pall | Listener: NO LISTENER | Concordance:\n",
+      "\t...have YOU...\n",
+      "Speaker: Jon | Listener: NO LISTENER | Concordance:\n",
+      "\t...Are YOU a Jedi...\n",
+      "Speaker: Judge Kota | Listener: NO LISTENER | Concordance:\n",
+      "\t...Is there anything else YOU need...\n",
+      "Speaker: Uthar Wynn | Listener: NO LISTENER | Concordance:\n",
+      "\t...YOU are brave to argue...\n",
       "===================== Torchlight Quests =====================\n",
+      "((?:[a-z]+ ){,30})(\\byou\\b)((?: [a-z]+){,30})\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "Speaker: Lord Taldimut | Concordance:\n",
+      "\t...If YOU can find those...\n",
       "Speaker: NO SPEAKER | Concordance:\n",
-      "\t...Thank the Guardians YOU...\n",
-      "Speaker: Vanquisher Captain | Concordance:\n",
-      "\t...the Professor sent YOU after the Power Source...\n",
-      "Speaker: Trill-Bot 4000 | Concordance:\n",
+      "\t...Maybe YOU can help me...\n",
+      "Speaker: Vanquisher Guard | Concordance:\n",
       "\t...YOU...\n",
-      "Speaker: NO SPEAKER | Concordance:\n",
-      "\t...The reconsituted Trillbot has presented YOU with a fragment of verse...\n",
       "Speaker: Zeraphi | Concordance:\n",
-      "\t...Have YOU face Tu...\n",
-      "Speaker: Mad Vanquisher Guard | Concordance:\n",
-      "\t...Have YOU seen any more of those demon...\n",
-      "Speaker: Professor Stoker | Concordance:\n",
-      "\t...I wish YOU had gotten here sooner...\n",
-      "Speaker: Destroyer | Concordance:\n",
-      "\t...m going to be any use to YOU...\n",
-      "Speaker: Fade | Concordance:\n",
-      "\t...why have YOU summoned me...\n",
-      "Speaker: Sprocket | Concordance:\n",
-      "\t...ve provided helps YOU in YOUr search...\n"
+      "\t...Did YOU investigate the Ancient Vaults of Chaos...\n",
+      "Speaker: Guardian Of Air | Concordance:\n",
+      "\t...and convince the Sphinx to grant YOU entry...\n",
+      "Speaker: Muzaffar | Concordance:\n",
+      "\t...Now that YOU have defeated the Ezrohir sorcerer in the tower...\n",
+      "Speaker: Wounded Zeraphi | Concordance:\n",
+      "\t...YOU...\n",
+      "Speaker: Vanquisher Guard | Concordance:\n",
+      "\t...good work YOU did...\n",
+      "Speaker: Fazeer Shah | Concordance:\n",
+      "\t...YOU finally found YOUr way out...\n",
+      "Speaker: Vanquisher Guard | Concordance:\n",
+      "\t...s quite impressed with YOU...\n"
      ]
     }
    ],
