Small change to concordances function in research.ipynb

--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
     "            output = ' | '.join([col.title() + \": \" + cont[col] for col in context_cols]) + \" | Concordance:\\n\\t\"\n",
     "\n",
     "        for concordance in concordance_list:\n",
-    "            cutoff = cutoff + 1\n",
+    "            cutoff += 1\n",
     "            if cutoff > num:\n",
     "                return\n",
     "            else:\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -300,81 +300,73 @@
      "text": [
       "===================== \"You\" Concordance Samples =====================\n",
       "===================== TES Books =====================\n",
-      "Author: Minique | Title: letter-minique | Concordance:\n",
-      "\t...Don't worry: As soon as YOU're out of there, we'll throw you a...\n",
-      "Author: Ralis Sedarys | Title: letter-ralis-sedarys-2 | Concordance:\n",
-      "\t...I don't want YOU to panic, but I need to see...\n",
-      "Author: Nilphas Omellian | Title: battlehorn-castle-upgrades-list | Concordance:\n",
-      "\t...completely refurbished with everything needed to support YOU and your household. I will also provide...\n",
-      "Author: Sinjin | Title: rislav-righteous | Concordance:\n",
-      "\t...\"Next time,\" Rislav said. \"Write before YOU come.\"...\n",
-      "Author: Hadaz | Title: hadazs-final-letter | Concordance:\n",
-      "\t...hearts made of coal and lava! If YOU find this, please tell the Mane. And...\n",
-      "Author: Lady Eloisse, Fifth Countess Manteau | Title: clothier-light-armor-basics | Concordance:\n",
-      "\t...so sturdy and staunch. Let me tell YOU just a little bit about how we...\n",
-      "Author: Anonymous | Title: skeevers | Concordance:\n",
-      "\t...red eyes, closer each night! When will YOU return with help? I can barely walk...\n",
-      "Author: King Joile | Title: king-joiles-orders-general-mercedene | Concordance:\n",
-      "\t...By the time YOU read this, a contingent of picked soldiers...\n",
-      "Author: Anonymous | Title: clarice-%E2%80%94-be-my-darling | Concordance:\n",
-      "\t...I think of YOU. A flock of geese,...\n",
-      "Author: Prince Fahara'jad | Title: true-told-tale-hallin-pt-1 | Concordance:\n",
-      "\t...Redguard warriors. And this was well, as YOU shall see....\n",
+      "Author: Waughin Jarth | Title: argonian-account-book-3 | Concordance:\n",
+      "\t...YOU have to be more flexible, my friend.\"...\n",
+      "Author: Anonymous | Title: scrawled-note-1 | Concordance:\n",
+      "\t...are falling to pieces, but I think YOU are exaggerating about the planks falling ou--------...\n",
+      "Author: Anonymous | Title: majid-please-read | Concordance:\n",
+      "\t...valuable. Please protect it at all costs. YOU and your men should sleep in shifts...\n",
+      "Author: Frincheps | Title: fools-ebony-part-threeth | Concordance:\n",
+      "\t...halfway point of our disjointed epic. If YOU are just arriving, you have missed little....\n",
+      "Author: Captain Alphaury | Title: captain-alphaurys-journal | Concordance:\n",
+      "\t...try to leave a trail so that YOU can follow our path. We're going to...\n",
+      "Author: Bruik | Title: letter-overseer | Concordance:\n",
+      "\t...I believe Captain Ageran already suspects something. YOU must speak with him soon to quell...\n",
+      "Author: Kynval Zzedenkathik | Title: i-was-summoned-mortal | Concordance:\n",
+      "\t...from behind a claw-pillar while shouting, \"There YOU are, weakling!\" just never loses its appeal....\n",
+      "Author: Anonymous | Title: beginners-guide-homesteading | Concordance:\n",
+      "\t...If you're like most people, YOU've always dreamed of owning your own steading...\n",
+      "Author: Anonymous | Title: letter-agnor | Concordance:\n",
+      "\t...By the time YOU finish reading this, someone you know will...\n",
+      "Author: Waughin Jarth | Title: yellow-book-riddles | Concordance:\n",
+      "\t...What YOU do to stay ahead...\n",
       "===================== Hollow Knight Dialogue =====================\n",
-      "Character: Charm Lover Salubra | Concordance:\n",
-      "\t...Have YOU ever drunk that bright blue liquid, 'lifeblood'?...\n",
-      "Character: Snail Shaman | Concordance:\n",
-      "\t...that creeping out of the darkness? My, YOU're looking grim! A strange, empty face and...\n",
-      "Character: Leg Eater | Concordance:\n",
-      "\t...A beautiful charm. I made it for YOU! If you hold it you'll feel a...\n",
-      "Character: Dreamers | Concordance:\n",
-      "\t...none could tame our savage souls yet YOU the challenge met,...\n",
+      "Character: Divine | Concordance:\n",
+      "\t...Did you call us? YOU called us, and we came. We came!...\n",
+      "Character: Iselda | Concordance:\n",
+      "\t...Highly recommended! If YOU're having trouble finding your way in the...\n",
       "Character: Tuk | Concordance:\n",
       "\t...that isn't yours. That's the law. Everything YOU see... it belongs to me. Don't be...\n",
-      "Character: White Defender | Concordance:\n",
-      "\t...My King... I believe in YOU. I believe in Hallownest! My devotion will...\n",
-      "Character: Troupe Master Grimm | Concordance:\n",
-      "\t...So, it was YOU who called us....\n",
-      "Character: Elder Hu | Concordance:\n",
-      "\t...Wait, child! Why have YOU come here? Have you come to tame...\n",
-      "Character: The Pale King | Concordance:\n",
-      "\t...YOU shall seal the blinding light that plagues...\n",
-      "Character: Xero | Concordance:\n",
-      "\t...Do you still hope, wanderer? Will YOU flee? Or will you raise your weapon...\n",
+      "Character: Grey Mourner | Concordance:\n",
+      "\t...wake? Why does che' persist? Ahhh Le'mer, YOU could not know of tragedy as complete...\n",
+      "Character: No Eyes | Concordance:\n",
+      "\t...My child... can YOU still see? Please, don't hurt me!...\n",
+      "Character: Zote the Mighty | Concordance:\n",
+      "\t...Just what do you think you're doing?! YOU dare to come between me and my...\n",
+      "Character: Relic Seeker Lemm | Concordance:\n",
+      "\t...a common find, so I can't offer YOU too much for them....\n",
+      "Character: Marmu | Concordance:\n",
+      "\t...Oh, stranger... YOU're strong. Much stronger than me......\n",
+      "Character: Snail Shaman | Concordance:\n",
+      "\t...that creeping out of the darkness? My, YOU're looking grim! A strange, empty face and...\n",
       "===================== KOTOR Dialogue =====================\n",
-      "Speaker: Judge Naleshekan | Listener: PLAYER | Concordance:\n",
-      "\t...We have determined that YOU are responsible for the detonations that occurred...\n",
-      "Speaker: Player | Listener: NO LISTENER | Concordance:\n",
-      "\t...Who were YOU fighting anyway?...\n",
+      "Speaker: Queedle | Listener: NO LISTENER | Concordance:\n",
+      "\t...I appreciate the money YOU gave me to upgrade my swoop. Come...\n",
       "Speaker: Jolee | Listener: NO LISTENER | Concordance:\n",
-      "\t...I'd call that quite a destiny, wouldn't YOU?...\n",
+      "\t...*sigh* And how many more like YOU are there out there, with no one...\n",
       "Speaker: Player | Listener: NO LISTENER | Concordance:\n",
-      "\t...What? My autoprint? Are YOU serious?...\n",
-      "Speaker: Selkath | Listener: NO LISTENER | Concordance:\n",
-      "\t...Consult your own diplomat if YOU have questions, off-worlder. If you do not...\n",
-      "Speaker: Player | Listener: Jolee | Concordance:\n",
-      "\t...Who are YOU to give me orders, old man?...\n",
+      "\t...I don't have that much. Would YOU go lower?...\n",
       "===================== Torchlight Quests =====================\n",
       "Speaker: Zeraphi Guard | Concordance:\n",
-      "\t...What did YOU learn from Fazeer Shah?...\n",
-      "Speaker: Cacklespit | Concordance:\n",
-      "\t...Oh, yes - YOU've found everything I need!...\n",
-      "Speaker: Wounded Zeraphi | Concordance:\n",
-      "\t...YOU've given us a fighting chance, hero....\n",
-      "Speaker: Wounded Zeraphi | Concordance:\n",
-      "\t...YOU've given us a fighting chance, hero....\n",
-      "Speaker: Guardian Of Air | Concordance:\n",
-      "\t...Zeryphesh is safe, now that YOU have rescued the Guardian of Mana from...\n",
+      "\t...Do you think YOU can free the Guardian?...\n",
+      "Speaker: Elder Valin | Concordance:\n",
+      "\t...Can YOU assist me?...\n",
+      "Speaker: Railman Charge | Concordance:\n",
+      "\t...Of course YOU have to break down in the desert...\n",
+      "Speaker: Olwin the Betrayed | Concordance:\n",
+      "\t...and, if my gratitude means anything to YOU, you have it....\n",
+      "Speaker: Fade | Concordance:\n",
+      "\t...Do not return until YOU have found the skulls of four warriors...\n",
+      "Speaker: Lord Taldimut | Concordance:\n",
+      "\t...Remember, if YOU should find yourself in Zeryphesh, please seek...\n",
       "Speaker: NO SPEAKER | Concordance:\n",
-      "\t...Fazeer Shah has promised to help YOU release the magical bonds placed on the...\n",
-      "Speaker: Sprocket | Concordance:\n",
-      "\t...Thank YOU again! We won't forget your kindness....\n",
-      "Speaker: Imperial Trapper | Concordance:\n",
-      "\t...I have found YOU ... worthy....\n",
-      "Speaker: Vanquisher Guard | Concordance:\n",
-      "\t...Did YOU make it up to the Enclave?...\n",
-      "Speaker: Fazeer Shah | Concordance:\n",
-      "\t...So ... YOU finally found your way out....\n"
+      "\t...Can YOU get into the Warbeast Den, in the...\n",
+      "Speaker: Imperial Railmaster | Concordance:\n",
+      "\t...I can have YOU up to Grunnheim in no time!...\n",
+      "Speaker: Wounded Zeraphi | Concordance:\n",
+      "\t...YOU've given us a fighting chance, hero....\n",
+      "Speaker: Destroyer | Concordance:\n",
+      "\t...I appreciate YOU coming all the way back here, but...\n"
      ]
     }
    ],
