Small change to research.ipynb

--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -1028,7 +1028,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These aren't the prettiest, but they do accurately highlight the proportion of named entity types per video game. Now, let's make a stacked bar chart highlighting the opposite, what how much of the type is found in a video game. The most common named entity, by far, is `ORG` for all games, followed by `PERSON`. I believe there is a small inaccuracy due to the model mistaking locations (`GPE` or `LOC`) for organizations.\n",
+    "These aren't the prettiest, but they do accurately highlight the proportion of named entity types per video game. The most common named entity, by far, seems to be `ORG` for all games, followed by `PERSON`. I believe there is a small inaccuracy due to the model mistaking locations (`GPE` or `LOC`) for organizations.\n",
     "***\n",
     "## Hapaxes"
    ]
